plugins {
    id 'java'
}

allprojects {
    group = 'org.reujdon.jtp'
    version = '0.2.0'

    repositories {
        mavenLocal()
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    dependencies {
        implementation("org.reujdon.async:Java-Async:1.0.0")

        implementation 'org.slf4j:slf4j-api:2.0.17'
        implementation 'ch.qos.logback:logback-classic:1.4.7'
        implementation 'com.google.code.gson:gson:2.8.8'

        // Test dependencies
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
        testImplementation 'org.junit.platform:junit-platform-suite:1.10.2'
    }

    test {
        useJUnitPlatform()
    }
}

tasks.register('aggregateJavadoc', Javadoc) {
    description = 'Generates unified Javadoc from all subprojects'
    group = 'Documentation'

    def allJavaSources = files(subprojects.collect { it.sourceSets.main.allJava })
    def allClasspaths = files(subprojects.collect { it.sourceSets.main.compileClasspath })

    source.setFrom(allJavaSources)
    classpath.setFrom(allClasspaths)

    destinationDir = layout.buildDirectory.dir("docs/javadoc").get().asFile
}

tasks.named("build") {
    dependsOn("aggregateJavadoc")
}